<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_shape"
    android:orientation="vertical">

    <!--标题-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:paddingRight="15dp"
            android:text="@string/dialog_title"
            android:textColor="@color/title_black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/bg_close" />

    </RelativeLayout>

    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/line_color" />

    <!--提示内容-->
    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:gravity="left|center"
        android:lineSpacingExtra="2dp"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/title_size" />

    <!--分割线-->
    <View
        android:id="@+id/view_divider2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color" />

    <!--按钮-->
    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_white_selector"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:text="@string/dialog_left_btn"
            android:textColor="@color/title_black"
            android:textSize="16sp" />

        <!--分割线-->
        <View
            android:id="@+id/view_divider"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/line_color" />

        <Button
            android:id="@+id/btn_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_white_selector"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:text="@string/dialog_right_btn"
            android:textColor="@color/title_black"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
